fixed spacing issue using styles

--- a/src/styles/_general_box_elements.scss
+++ b/src/styles/_general_box_elements.scss
@@ -8,9 +8,12 @@ h1.main-heading{
     font-weight:750;
 }
 
-p.para-desc{
+div.para-desc{
     font-size:1.1em;
     margin-bottom:1.5em;
+    &>*{
+        margin:0px;
+    }
 }
 
 h4.line-heading{
@@ -331,6 +334,9 @@ div.single-note-item-wrapper{
         padding:0.5em;
         flex-grow:1;
         margin-left:1em;
+        &>*{
+            margin:0px;
+        }
         &[noborder="1"]{
             border-left:0px;
             border-bottom:0px;
